# FormBadger

./: .gitignore  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: black.yml  ci.yml  quality.yml
src/formbadger/: analyze_pdf.py  constants.py  field_map.py  field_map_csv.py  generate_pdf.py  utils.py
tests/: test_field_map_csv.py
